Follow-up for bug 568966. js_Call is never called with JSFRAME_CONSTRUCT.